# msgpack-rpc-rs

./: .travis.yml  Cargo.toml  README.md  search-index.js  stream.txt
client/: index.html
examples/: simple.rs
examples/client/: Cargo.toml
examples/line_proto_server/: Cargo.toml
examples/server/: Cargo.toml
examples/simple/: Cargo.toml  init.vim  plugin.sh
examples/stdio/: Cargo.toml  stream.txt
implementors/msgpack_rpc/: trait.Handler.js
implementors/tokio_io/: trait.AsyncRead.js  trait.AsyncWrite.js
lib/: Cargo.toml
lib/examples/: stdin.rs
lib/src/: client.rs  distributor.rs  endpoint.rs  lib.rs  message.rs  multiplexer.rs  nvim.rs  process.rs  proto.rs  result.rs  transport.rs  util.rs
lib/src/io/: mod.rs  process.rs  stdio.rs
lib/src/rpc/: bidirectional.rs  client.rs  codec.rs  errors.rs  message.rs  mod.rs  server.rs
lib/src/stdio/: mod.rs  server.rs  stream.rs
msgpack-rpc/: Cargo.toml
msgpack-rpc/src/: client.rs  endpoint.rs  lib.rs  message.rs  multiplexer.rs  notify.rs  server.rs  transport.rs  util.rs
msgpack_rpc/: enum.Value.html  index.html  sidebar-items.js  struct.Ack.html  struct.Client.html  struct.Endpoint.html  struct.Response.html  trait.Handler.html
msgpack_rpc/client/: struct.Ack.html  struct.Client.html  struct.Response.html
msgpack_rpc/endpoint/: struct.Endpoint.html
msgpack_rpc/io/: ChildProcessStream.t.html  fn.run_stdio.html  fn.run_tcp.html  index.html  run_stdio.v.html  run_tcp.v.html  sidebar-items.js  (+2 more)
scripts/: deploy_doc.sh
src/: client.rs  distributor.rs  endpoint.rs  lib.rs  message.rs  proto.rs
(+31 files in other folders)
